# Sound-R

./: .gitignore  pyproject.toml
dnd_sound_engine/: __main__.py  sound_engine.py  types.py  utils.py
dnd_sound_engine/gui/: app.py
dnd_sound_engine/sounds/: sound_engine.py
sound_r/: __main__.py  utils.py
sound_r/gui/: app.py
sound_r/sounds/: sound_engine.py  types.py
