[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dnd_sound_engine"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.10"
pydub = {version = "^0.25.1"}

[tool.poetry.group.formatting.dependencies]
black="^24.10.0"
isort="^5.13.2"

[tool.isort]
profile = "black"


