[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sound_r"
version = "0.1.0"
authors = [
    "Chris De Jesus <christopher2653@gmail.com>"
]
description = "A sound cue system for D&D"

[tool.poetry.dependencies]
python = "^3.10,<3.14"
pygame = {version = "^2.6.1"}
tqdm = {version = "^4.67.1"}
PySide6 = {version = "~=6.8.1.1"}
PySide6-Essentials = {version = "~=6.8.1.1"}
PySide6-Addons = {version = "~=6.8.1.1"}


[tool.poetry.group.formatting.dependencies]
black="^24.10.0"
isort="^5.13.2"

[tool.isort]
profile = "black"
